# arcsys2

./: .gitignore  .gitmodules  LICENSE.txt  README.md
src/arcsys2_bringup/: CMakeLists.txt  package.xml
src/arcsys2_bringup/launch/: arcsys2_bringup.launch  arcsys2_bringup_all.launch  arcsys2_bringup_controller.launch  arcsys2_bringup_description.launch  arcsys2_bringup_moveit.launch  arcsys2_bringup_sensor.launch  arcsys2_bringup_test.launch  arcsys2_bringup_test_split_type_hw.launch  tomato_dammy.launch
src/arcsys2_control/: CMakeLists.txt  package.xml
src/arcsys2_control/config/: arcsys2_control.yaml  arcsys2_joint_controller.yaml  joint_state_controller.yaml  joint_trajectory_controller.yaml  joint_trajectory_split_controller.yaml  real_config.yaml
src/arcsys2_control/launch/: arcsys2_control.launch  arcsys2_joint_controller.launch  joint_state_controller.launch  joint_trajectory_controller.launch  joint_trajectory_split_controller.launch
src/arcsys2_control/src/: arcsys2_action_client_node.cpp  arcsys2_action_server_node.cpp  arcsys2_control_node.cpp  arcsys2_dammy_hw_node.cpp  arcsys2_dummy_hw_node.cpp  arcsys2_servo_hardware_node.cpp  arcsys2_split_dammy_hw_node.cpp
src/arcsys2_description/: CMakeLists.txt  package.xml  test.sh
src/arcsys2_description/launch/: arcsys2_description.launch
src/arcsys2_description/urdf/: arcsys2.xacro  hoge.xacro
src/arcsys2_gazebo/: CMakeLists.txt  package.xml
src/arcsys2_gazebo/launch/: arcsys2_gazebo.launch
src/arcsys2_gazebo/worlds/: arcsys2.world
src/arcsys2_move_group_interface/: CMakeLists.txt  package.xml
src/arcsys2_move_group_interface/launch/: move_group_interface.launch
src/arcsys2_move_group_interface/src/: arcsys2_move_group.cpp  arcsys2_move_group_interface.cpp
src/arcsys2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arcsys2_moveit_config/config/: arcsys2.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
src/arcsys2_moveit_config/launch/: arcsys2_moveit_controller_manager.launch.xml  default_warehouse_db.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/close_tomato_searcher/: CMakeLists.txt
src/close_tomato_searcher/launch/: close_tomato_searcher.launch
src/close_tomato_searcher/src/: close_tomato_searcher_node.cpp
src/driver/KrsServo/: CMakeLists.txt  package.xml
src/driver/krs_servo/: CMakeLists.txt  package.xml
src/driver/krs_servo/launch/: krs_servo.launch
src/driver/krs_servo/scripts/: device_setup.sh
src/driver/krs_servo/src/: krs_servo_node.cpp
src/driver/servo_krs/: CMakeLists.txt  package.xml
src/driver/servo_krs/script/: setup.sh
src/driver/servo_krs/src/: servo_krs_node.cpp
src/driver/servo_msgs/: CMakeLists.txt  package.xml
src/driver/servo_msgs/msg/: ArmDegree.msg  IdBased.msg
src/kinect_tomato_searcher/: CMakeLists.txt  package.xml
src/kinect_tomato_searcher/cfg/: Calibration.cfg  Search.cfg  kinect_tomato_searcher.cfg
src/kinect_tomato_searcher/launch/: iai_kinect_bringup.launch  kinect_tomato_group_search.launch  kinect_tomato_searcher.launch
src/kinect_tomato_searcher/src/: kinect_tomato_broadcaster_node.cpp  kinect_tomato_group_search_node.cpp  kinect_tomato_searcher_node.cpp  kinect_tomato_selector_node.cpp  tomato_broadcaster.cpp
src/manipulator/arm_msgs/: CMakeLists.txt  package.xml
src/manipulator/moveit_trajectory_planner/: CMakeLists.txt  package.xml
src/manipulator/pattern_posture_generator/: CMakeLists.txt  example.yaml  package.xml
src/manipulator/pattern_posture_generator/include/: pattern_posture_generator_node.hpp
src/manipulator/pattern_posture_generator/launch/: generator.launch
src/manipulator/pattern_posture_generator/src/: pattern_posture_generator_node.cpp
src/manipulator/pattern_posture_generator/srv/: PatternKeyPosture.srv  PatternPosture.srv  RequestNum.srv
src/manipulator/simple_trajectory_planner/: CMakeLists.txt  package.xml
src/manipulator/simple_trajectory_planner/src/: trajectory_planner.cpp
src/manipulator/trajectory_planner/: CMakeLists.txt
src/motion/arcsys2_control/: CMakeLists.txt  package.xml
src/motion/arcsys2_control/config/: arcsys2_control.yaml  real_config.yaml
src/motion/arcsys2_control/launch/: arcsys2_control.launch
src/motion/arcsys2_control/src/: arcsys2_control_node.cpp
src/motion/arcsys2_controller/: CMakeLists.txt  package.xml
src/motion/arcsys2_controller/src/: arcsys2_controller_node.cpp
src/motion/arcsys2_description/: .gitignore  CMakeLists.txt  package.xml  test.sh
src/motion/arcsys2_description/launch/: arcsys2_description.launch
src/motion/arcsys2_description/urdf/: arcsys2.dae  arcsys2.urdf  arcsys2.xacro
src/motion/arcsys2_moveit_config/: .setup_assistant
src/motion/arm_id_based/: CMakeLists.txt  package.xml
src/motion/arm_id_based/launch/: arm_id_based.launch
src/motion/arm_id_based/parameter/: example.yaml
src/motion/arm_id_based/src/: arm_id_based_node.cpp
src/motion/arm_msgs/: CMakeLists.txt  package.xml
src/motion/manipulator/: .gitignore  CMakeLists.txt  package.xml  test.sh
src/motion/manipulator/launch/: manipulator.launch
src/motion/manipulator/urdf/: arcsys2.urdf  arcsys2.xacro
src/planner/arcsys2_move_group/: CMakeLists.txt
src/planner/ikfast_moveit_plugin/: CMakeLists.txt  gencpp.sh  package.xml
src/planner/main_aciton_planner/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/planner/main_action_planner/: CMakeLists.txt  package.xml
src/planner/main_action_planner/include/: impl_request_posture.hpp  impl_send_posture.hpp  main_action_planner_node.hpp  request_posture.hpp  send_posture.hpp  state.hpp
src/planner/main_action_planner/launch/: main_planner.launch
src/planner/main_action_planner/src/: main_action_planner_node.cpp  request_posture.cpp  send_posture.cpp  state.cpp
src/planner/pattern_posture_generator/: CMakeLists.txt  package.xml
src/state/state_msgs/: CMakeLists.txt  (+1 more)
(+43 files in other folders)
