<?xml version="1.0"?>
<package>
  <name>arcsys2_bringup</name>
  <version>0.1.0</version>
  <description>The arcsys2_bringup package</description>

  <maintainer email="httperror@404-notfound.jp">Yamasaki Tatsuya</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>arcsys2_control</exec_depend>
  <exec_depend>arcsys2_moveit_config</exec_depend>
</package>
