<?xml version="1.0"?>

<package format="2">
  <name>arcsys2_control</name>
  <version>0.1.0</version>
  <description>The arcsys2_control package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <maintainer email="httperror@404-notfound.jp">Yamasaki Tatsuya</maintainer>

  <license>MIT</license>

  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author>
  <author email="httperror@404-notfound.jp">Yamasaki Tatsuya</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend> actionlib                   </depend>
  <depend> actionlib_msgs              </depend>
  <depend> control_msgs                </depend>
  <depend> controller_manager          </depend>
  <depend> hardware_interface          </depend>
  <depend> joint_trajectory_controller </depend>
  <depend> position_controller         </depend>
  <depend> robot_state_publisher       </depend>
  <depend> roscpp                      </depend>
  <depend> trajectory_msgs             </depend>

  <export> </export>
</package>
