<?xml version="1.0"?>
<package>
  <name>KrsServo</name>
  <version>0.0.1</version>
  <description>The KrsServo package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>

  <license>MIT</license>


  <author email="o111027y@mail.kyutech.jp">Yusuke Doi</author>

  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>servo_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>servo_msgs</run_depend>
</package>
