<?xml version="1.0"?>
<package format="2">
  <name>krs_servo</name>
  <version>0.0.1</version>
  <description>The KrsServo package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>

  <license>MIT</license>


  <author email="o111027y@mail.kyutech.jp">Yusuke Doi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>servo_msgs</depend>
</package>
