<?xml version="1.0"?>
<package format="2">
  <name>servo_krs</name>
  <version>0.1.0</version>
  <description>The servo_krs package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/agrirobo/arcsys2</url>

  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>servo_msgs</depend>
  <depend>ics3</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
