<?xml version="1.0"?>
<package>
  <name>servo_msgs</name>
  <version>0.0.1</version>
  <description>The servo_msgs package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>

  <license>MIT</license>

  <author email="o111027y@mail.kyutech.jp">Yusuke Doi</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
