<?xml version="1.0"?>
<package format="2">
  <name>servo_msgs</name>
  <version>0.0.1</version>
  <description>The servo_msgs package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>

  <license>MIT</license>

  <author email="o111027y@mail.kyutech.jp">Yusuke Doi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
