<?xml version="1.0"?>
<package format="2">
  <name>arm_msgs</name>
  <version>0.0.0</version>
  <description>The arm_msgs package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>

  <license>MIT</license>

  <author email="o111027y@mail.kyutech.jp">Yusuke Doi</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
