<?xml version="1.0"?>
<package>
  <name>simple_trajectory_planner</name>
  <version>0.0.1</version>
  <description>The simple_trajectory_planner package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>
  <maintainer email="httperror@404-notfound.jp">YamaCIR-KIT</maintainer>
  <license>MIT</license>

  <author email="httperror@404-notfound.jp">YamaCIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>servo_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>servo_msgs</run_depend>
</package>
