<?xml version="1.0"?>
<package format="2">
  <name>simple_trajectory_planner</name>
  <version>0.0.1</version>
  <description>The simple_trajectory_planner package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>
  <maintainer email="httperror@404-notfound.jp">YamaCIR-KIT</maintainer>
  <license>MIT</license>

  <author email="httperror@404-notfound.jp">YamaCIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>servo_msgs</depend>
</package>
