<?xml version="1.0"?>
<package format="2">
  <name>arcsys2_control</name>
  <version>0.1.0</version>
  <description>The arcsys2_control package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <license>MIT</license>
  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>

  <export>
  </export>
</package>
