<?xml version="1.0"?>

<package format="2">
  <name> arcsys2_description </name>
  <version> 0.0.1 </version>
  <maintainer email="httperror@404-notfound.jp"> Yamasaki Tatsuya </maintainer>
  <license> MIT </license>

  <description>
    The arcsys2_description package.
  </description>

  <buildtool_depend> catkin </buildtool_depend>
  <exec_depend> joint_state_publisher </exec_depend>
  <exec_depend> robot_state_publisher </exec_depend>
  <exec_depend> rviz </exec_depend>
</package>
