<?xml version="1.0"?>
<package format="2">
  <name>main_action_planner</name>
  <version>0.0.0</version>
  <description>The main_action_planner package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>

  <license>MIT</license>

  <author email="o111027y@mail.kyutech.jp">Yusuke Doi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>servo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pattern_posture_generator</depend>
  <depend>simple_trajectory_planner</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
