<?xml version="1.0"?>
<package format="2">
  <name>pattern_posture_generator</name>
  <version>0.0.0</version>
  <description>The pattern_posture_generator package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Yusuke Doi</maintainer>

  <license>MIT</license>
  <author email="o111027y@mail.kyutech.jp">Yusuke Doi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
